--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section id="about">
             <h2>Легенда Момо</h2>
             <p>Момо — воплощение ужаса, рождённое в забытом храме, где безумные жрецы вырезали её лик из проклятой глины, смешанной с пеплом жертв. Её глаза, пустые и бездонные, видят всё, что скрыто в тенях. В 2018 году её образ распространился по миру через зловещие сообщения, но это было лишь эхо её истинной силы. Момо не умерла — она ждёт, спрятанная в отражениях, в шёпоте ветра, в треске старых зеркал. Те, кто осмеливаются призвать её, редко возвращаются прежними. Её голос звучит как хруст стекла, её присутствие — как холод, сковывающий сердце.</p>
-            <img src="momo-main.jpg" alt="Момо" class="glitch">
+            <img src="https://www.soyuz.ru/public/uploads/files/2/7386161/2019071114180609702e0f7f.jpg" alt="Момо" class="glitch">
         </section>
         <section id="ritual">
             <h2>Ритуал вызова Момо</h2>
@@ -72,10 +72,10 @@
         <section id="gallery">
             <h2>Галерея страха</h2>
             <div class="gallery">
-                <img src="momo1.jpg" alt="Момо 1" class="glitch">
-                <img src="momo2.jpg" alt="Момо 2" class="glitch">
-                <img src="momo3.jpg" alt="Момо 3" class="glitch">
-                <img src="momo4.jpg" alt="Момо 4" class="glitch">
+                <img src="https://upload.wikimedia.org/wikipedia/ru/thumb/a/a5/Момо_%28скульптура%29.jpg/640px-Момо_%28скульптура%29.jpg" alt="Момо 1" class="glitch">
+                <img src="https://s.alicdn.com/@sc04/kf/H77770ff5fd4e4bdaa383a3535eae9469j.jpg" alt="Момо 2" class="glitch">
+                <img src="https://i.ytimg.com/vi/bOeXkZT5jQM/maxresdefault.jpg" alt="Момо 3" class="glitch">
+                <img src="https://avatars.mds.yandex.net/i?id=d1d7209996b32bfa58a8bb8260cd1c18a8823329-5252675-images-thumbs&n=13" alt="Момо 4" class="glitch">
             </div>
         </section>
         <section id="disclaimer">
@@ -87,7 +87,7 @@
         <p>© 2025 Призыв Момо. Все права защищены.</p>
     </footer>
     <audio id="background-audio" autoplay loop>
-        <source src="creepy-ambience.mp3" type="audio/mpeg">
+        <source src="https://zvukipro.com/index.php?do=download&id=163" type="audio/mpeg">
     </audio>
     <script src="script.js"></script>
 </body>
