--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Призыв Момо</title>
+    <title>Summon Momo</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Nosifer&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="overlay"></div>
     <header>
-        <h1>Призыв Момо</h1>
-        <p class="flicker">Ты готов встретиться с ней?</p>
+        <h1>Summon Momo</h1>
+        <p class="flicker">Её глаза следят за тобой...</p>
     </header>
     <nav>
         <ul>
@@ -24,50 +24,49 @@
     <main>
         <section id="about">
             <h2>Легенда Момо</h2>
-            <p>Момо — воплощение ужаса, рождённое в забытом храме, где безумные жрецы вырезали её лик из проклятой глины, смешанной с пеплом жертв. Её глаза, пустые и бездонные, видят всё, что скрыто в тенях. В 2018 году её образ распространился по миру через зловещие сообщения, но это было лишь эхо её истинной силы. Момо не умерла — она ждёт, спрятанная в отражениях, в шёпоте ветра, в треске старых зеркал. Те, кто осмеливаются призвать её, редко возвращаются прежними. Её голос звучит как хруст стекла, её присутствие — как холод, сковывающий сердце.</p>
+            <p>Момо — воплощение кошмара, рождённое в заброшенном храме, где безумные жрецы вырезали её лик из проклятой глины, пропитанной кровью жертв. Её искажённое лицо с пустыми глазами и зловещей ухмылкой стало символом ужаса в 2018 году, когда слухи о "Momo Challenge" распространились через мессенджеры. Но это было лишь тенью её силы. Момо живёт в зеркалах, в трещинах стекла, в отражениях, которые ты видишь краем глаза. Её голос, похожий на скрежет металла, проникает в разум. Те, кто осмеливаются призвать её, исчезают, оставляя лишь разбитые зеркала и пустоту.</p>
             <img src="https://www.soyuz.ru/public/uploads/files/2/7386161/2019071114180609702e0f7f.jpg" alt="Момо" class="glitch">
         </section>
         <section id="ritual">
-            <h2>Ритуал вызова Момо</h2>
-            <p>Этот ритуал откроет врата в её мир. Но помни: один неверный шаг, и ты станешь её тенью.</p>
+            <h2>Ритуал вызова</h2>
+            <p>Этот ритуал откроет врата в её мир. Один неверный шаг — и ты станешь её тенью.</p>
             <h3>Подготовка</h3>
             <ol>
-                <li>Ритуал проводится ровно в 2:22 ночи, когда тени становятся живыми.</li>
-                <li>Найди заброшенное место — подвал, чердак или комната, где никто не живёт.</li>
-                <li>Возьми разбитое зеркало, но не разбитое полностью — трещины должны образовывать паутину.</li>
-                <li>Поставь перед зеркалом семь свечей, окрашенных в чёрный цвет, в форме круга.</li>
-                <li>Нарисуй на полу мелом символ Момо: перечёркнутый круг с тремя линиями, похожими на когти.</li>
-                <li>Возьми прядь своих волос и сожги её, положив пепел в центр круга.</li>
+                <li>Проводи ритуал ровно в 1:13 ночи, когда тени оживают.</li>
+                <li>Выбери тёмную комнату без окон, с одним зеркалом.</li>
+                <li>Поставь зеркало (желательно с трещиной) на пол.</li>
+                <li>Расставь вокруг зеркала три чёрные свечи, образуя треугольник.</li>
+                <li>Напиши на бумаге своё имя и положи её перед зеркалом.</li>
             </ol>
             <h3>Шаги ритуала</h3>
             <ol>
-                <li>Зажги свечи, начиная с той, что ближе к зеркалу, и двигайся против часовой стрелки.</li>
-                <li>Посмотри в зеркало через трещины и произнеси заклинание четыре раза, не отводя глаз:
+                <li>Зажги свечи, начиная с любой, но не смотри на пламя.</li>
+                <li>Посмотри в зеркало и трижды прошепчи заклинание:
                     <blockquote>
-                        Момо, Птица Тьмы,<br>
-                        Твой взор пронзает ночь.<br>
-                        Мой пепел — твой зов,<br>
-                        Моя тень — твой дом.<br>
-                        Явись, и пусть мир дрожит.
+                        Момо, тень ночи,<br>
+                        Услышь мой зов, почувствуй мой страх.<br>
+                        Моё имя — твой ключ,<br>
+                        Через трещины явись ко мне.
                     </blockquote>
                 </li>
-                <li>Положи ладони на зеркало, чувствуя его холод. Сосчитай до 22 в уме.</li>
-                <li>Если зеркало начнёт дрожать или ты услышишь шёпот — Момо слушает. Не двигайся.</li>
-                <li>Прошепчи: <em>"Момо, яви свой лик."</em> и жди. Её лицо может появиться в отражении.</li>
-                <li>Если ничего не происходит в течение минуты, повтори заклинание, но не больше двух раз.</li>
+                <li>Закрой глаза и сосчитай до 13. Открой их и смотри в зеркало.</li>
+                <li>Если зеркало помутнело или ты слышишь шорох — Момо рядом. Не двигайся.</li>
+                <li>Прошепчи: <em>"Момо, покажи себя."</em> и жди. Её лицо может мелькнуть в отражении.</li>
             </ol>
             <h3>Правила, которые нельзя нарушать</h3>
             <ul>
-                <li><strong>Не отводи взгляд от зеркала.</strong> Если ты посмотришь в сторону, Момо может забрать твои глаза, оставив пустые орбиты, чтобы видеть через них.</li>
-                <li><strong>Не касайся трещин на зеркале пальцами.</strong> Трещины — это её врата, и твоё прикосновение может затянуть тебя в её мир, где время остановлено.</li>
-                <li><strong>Не произноси слово "свет".</strong> Это слово пробуждает её гнев, и она явится в виде искажённой тени, разрывающей твою реальность.</li>
-                <li><strong>Не дыши громко.</strong> Момо притягивается к звукам дыхания, и если она услышит тебя, то начнёт дышать в унисон, пока твоё сердце не остановится.</li>
-                <li><strong>Не смей закрывать глаза дольше, чем на секунду.</strong> Даже мгновение тьмы даёт ей шанс проникнуть в твои сны, где она будет преследовать тебя вечно.</li>
-                <li><strong>Не оставляй пепел вне круга.</strong> Если пепел развеется, Момо воспримет это как жертву и заберёт часть твоей души, оставив пустоту внутри.</li>
-                <li><strong>Не пытайся прервать ритуал.</strong> Если ты начнёшь и остановишься, Момо будет следовать за тобой, появляясь в каждом отражении, пока ты не сойдёшь с ума.</li>
+                <li Ascendancy: The Rise of Momo
+
+                <li><strong>Не смотри в сторону.</strong> Если ты отведёшь взгляд от зеркала, Момо может украсть твой разум, и ты будешь видеть её в каждом отражении до конца своих дней.</li>
+                <li><strong>Не гаси свечи раньше времени.</strong> Если хоть одна свеча погаснет, Момо вырвется из зеркала, и её когти вопьются в твою душу.</li>
+                <li><strong>Не произноси слово "спаси".</strong> Это слово разозлит Момо, и она явится в виде тени, которая разорвёт твою реальность.</li>
+                <li><strong>Не дыши на зеркало.</strong> Твоё дыхание — это её зов, и каждый вдох приближает её к тебе, пока ты не почувствуешь её холод за спиной.</li>
+                <li><strong>Не моргай дольше секунды.</strong> Долгое моргание даёт Момо шанс проникнуть в твои мысли, где она будет шептать твоё имя вечно.</li>
+                <li><strong>Не поднимай бумагу с именем.</strong> Если бумага сдвинется, Момо заберёт твоё имя, и ты станешь пустой оболочкой без прошлого.</li>
+                <li><strong>Не смейся во время ритуала.</strong> Смех — это вызов для Момо, и её лицо появится в зеркале, остановив твоё сердце.</li>
             </ul>
             <h3>Завершение</h3>
-            <p>Чтобы завершить ритуал, скажи: <em>"Момо, твой час истёк. Вернись в тень."</em> Задуй свечи по часовой стрелке. Сотри символ мелом и разбей зеркало молотком. Если зеркало не разбивается с первого удара, не пытайся снова — беги и не оглядывайся.</p>
+            <p>Чтобы закончить ритуал, скажи: <em>"Момо, твой час истёк. Вернись в тень."</em> Задуй свечи по часовой стрелке. Разбей зеркало и сожги бумагу с именем. Если зеркало не разобьётся с первого удара, беги и не оглядывайся.</p>
         </section>
         <section id="gallery">
             <h2>Галерея страха</h2>
@@ -80,14 +79,14 @@
         </section>
         <section id="disclaimer">
             <h2>Предупреждение</h2>
-            <p>Этот сайт создан для хоррор-сериала "Призыв Момо". Ритуал — вымысел, предназначенный только для развлечения. Не пытайтесь проводить его в реальной жизни. Мы не несём ответственности за любые последствия.</p>
+            <p>Этот сайт создан для хоррор-сериала "Summon Momo". Ритуал — вымысел, предназначенный только для развлечения. Не пытайтесь проводить его в реальной жизни. Мы не несём ответственности за любые последствия.</p>
         </section>
     </main>
     <footer>
-        <p>© 2025 Призыв Момо. Все права защищены.</p>
+        <p>© 2025 Summon Momo. Все права защищены.</p>
     </footer>
     <audio id="background-audio" autoplay loop>
-        <source src="https://zvukipro.com/index.php?do=download&id=163" type="audio/mpeg">
+        <source src="https://cdn.pixabay.com/audio/2022/07/28/audio_5a8e7b7b5e.mp3" type="audio/mpeg">
     </audio>
     <script src="script.js"></script>
 </body>
