--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="overlay"></div>
     <header>
         <h1>Summon Momo</h1>
-        <p class="flicker">Она уже слышит твой голос...</p>
+        <p class="flicker">Она знает, что ты здесь...</p>
     </header>
     <nav>
         <ul>
@@ -24,16 +24,16 @@
     <main>
         <section id="about">
             <h2>Легенда Момо</h2>
-            <p>Момо — кошмар, рождённый в тени заброшенного храма, где её лицо вырезали из глины, пропитанной кровью и пеплом. Её пустые глаза и кривая ухмылка в 2018 году проникли в мир через мессенджеры, сея ужас под видом "Momo Challenge". Но это было лишь началом. Она живёт в зеркалах, в трещинах стекла, в тенях за твоей спиной. Её шёпот, как хруст костей, зовёт тебя по имени. Те, кто призывает Момо, исчезают, оставляя лишь треснувшие зеркала и эхо зловещего смеха.</p>
+            <p>Момо — кошмар, сотканный из теней заброшенного храма, где её лицо вырезали из глины, пропитанной кровью и страхом. В 2018 году она явилась миру через мессенджеры, сея панику под видом "Momo Challenge". Её пустые глаза и зловещая ухмылка — лишь маска. Она живёт в зеркалах, в трещинах стекла, в шорохах за твоей спиной. Её шёпот, как хруст костей, зовёт по имени. Те, кто осмеливаются призвать Момо, исчезают, оставляя лишь треснувшие зеркала и эхо её смеха.</p>
             <img src="https://www.soyuz.ru/public/uploads/files/2/7386161/2019071114180609702e0f7f.jpg" alt="Момо" class="glitch">
         </section>
         <section id="ritual">
             <h2>Ритуал вызова</h2>
-            <p>Этот ритуал откроет дверь в её мир. Но помни: Момо не любит, когда её зовут зря.</p>
+            <p>Этот ритуал призовёт Момо. Но будь осторожен: она не уходит просто так.</p>
             <h3>Подготовка</h3>
             <ol>
-                <li>Проводи ритуал в 1:13 ночи, когда тьма становится живой.</li>
-                <li>Возьми небольшое зеркало и поставь его на стол или пол.</li>
+                <li>Проводи ритуал в 1:13 ночи, когда тьма оживает.</li>
+                <li>Возьми небольшое зеркало и поставь его на стол.</li>
                 <li>Поставь две чёрные свечи рядом с зеркалом.</li>
                 <li>Напиши своё имя на листе бумаги и положи его перед зеркалом.</li>
             </ol>
@@ -53,20 +53,20 @@
             </ol>
             <h3>Признаки, что Момо пришла</h3>
             <ul>
-                <li>Ты услышишь шорохи, будто кто-то скребёт стены или пол.</li>
-                <li>В зеркале мелькнёт чужое лицо или искажённая тень.</li>
-                <li>Комната станет холодной, как будто дует из ниоткуда.</li>
-                <li>Ты услышишь шаги за спиной или зловещий смех, похожий на детский.</li>
+                <li>Ты услышишь шорохи, будто кто-то скребёт стены.</li>
+                <li>В зеркале мелькнёт чужое лицо или тень.</li>
+                <li>Комната станет холодной, как от сквозняка.</li>
+                <li>Ты услышишь шаги или зловещий смех, похожий на детский.</li>
                 <li>Свечи начнут мигать или дымить без причины.</li>
             </ul>
             <h3>Правила, которые нельзя нарушать</h3>
             <ul>
                 <li><strong>Не отводи взгляд от зеркала.</strong> Если посмотришь в сторону, Момо может не прийти, но начнёт следить за тобой из каждого отражения.</li>
                 <li><strong>Не гаси свечи до конца ритуала.</strong> Если пламя погаснет, Момо проклянёт тебя, и ты будешь видеть её тень каждую ночь.</li>
-                <li><strong>Не говори слово "уйди".</strong> Это разозлит Момо, и она поселится в твоём доме, пугая тебя шорохами и тенями.</li>
-                <li><strong>Не касайся зеркала.</strong> Прикосновение может открыть ей путь, и она будет являться тебе во снах.</li>
-                <li><strong>Не трогай бумагу с именем.</strong> Если лист сдвинется, Момо заберёт твоё имя, и ты будешь чувствовать её присутствие всегда.</li>
-                <li><strong>Не кричи.</strong> Крик привлечёт Момо, и она начнёт стучать в двери и окна твоего дома по ночам.</li>
+                <li><strong>Не говори слово "уйди".</strong> Это разозлит Момо, и она поселится в твоём доме, пугая шорохами и тенями.</li>
+                <li><strong>Не касайся зеркала.</strong> Прикосновение откроет ей путь, и она будет являться во снах.</li>
+                <li><strong>Не трогай бумагу с именем.</strong> Если лист сдвинется, Момо привяжет твоё имя к себе, и ты будешь чувствовать её присутствие всегда.</li>
+                <li><strong>Не кричи.</strong> Крик привлечёт Момо, и она начнёт стучать в двери и окна по ночам.</li>
             </ul>
             <h3>Завершение</h3>
             <p>Скажи: <em>"Момо, твой час закончился."</em> Задуй свечи. Сожги бумагу с именем. Разбей зеркало и выброси осколки. Если зеркало не разобьётся, Момо останется рядом.</p>
