--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Summon Momo: Ритуал вызова</title>
-    <meta name="description" content="Summon Momo — жуткий ритуал вызова Момо, интернет-легенды. Погрузитесь в хоррор-атмосферу с правилами, галереей страха и пугающими эффектами.">
-    <meta name="keywords" content="Summon Momo, Момо, ритуал Момо, хоррор, вызов Момо, интернет-легенда, страшный ритуал">
+    <title>Summon Momo: Жуткий ритуал вызова</title>
+    <meta name="description" content="Узнайте, как призвать Момо — жуткий ритуал из интернет-легенды. Погрузитесь в хоррор-атмосферу с правилами и галереей страха.">
+    <meta name="keywords" content="Summon Momo, Момо, ритуал Момо, хоррор, интернет-легенда, вызов Момо">
     <meta name="author" content="Horror Enthusiast">
     <meta name="robots" content="index, follow">
     <meta name="category" content="horror entertainment">
@@ -16,7 +16,8 @@
     <div class="overlay"></div>
     <header>
         <h1>Summon Momo</h1>
-        <p class="flicker">Она слышит твой голос...</p>
+        <p class="flicker">Она знает, что ты здесь...</p>
+        <button id="play-audio" class="audio-btn">Включить звук</button>
     </header>
     <nav>
         <ul>
@@ -29,12 +30,12 @@
     <main>
         <section id="about">
             <h2>Легенда Момо</h2>
-            <p>Момо — кошмар, сотканный из теней заброшенного храма, где её лицо вырезали из глины, пропитанной кровью и страхом. В 2018 году Summon Momo стал известен через мессенджеры как "Momo Challenge", сея панику по всему миру. Её пустые глаза и зловещая ухмылка — лишь маска ужаса. Она обитает в зеркалах, в трещинах стекла, в шорохах за твоей спиной. Её шёпот, как хруст костей, зовёт по имени. Те, кто осмеливаются провести ритуал Summon Momo, исчезают, оставляя лишь треснувшие зеркала и эхо её смеха.</p>
+            <p>Момо — кошмар, сотканный из теней заброшенного храма, где её лицо вырезали из глины, пропитанной кровью и страхом. В 2018 году она явилась миру через мессенджеры, сея панику под видом "Momo Challenge". Её пустые глаза и зловещая ухмылка — лишь маска. Она живёт в зеркалах, в трещинах стекла, в шорохах за твоей спиной. Её шёпот, как хруст костей, зовёт по имени. Те, кто осмеливаются призвать Момо, исчезают, оставляя лишь треснувшие зеркала и эхо её смеха.</p>
             <img src="https://www.soyuz.ru/public/uploads/files/2/7386161/2019071114180609702e0f7f.jpg" alt="Момо" class="glitch">
         </section>
         <section id="ritual">
             <h2>Ритуал вызова Момо</h2>
-            <p>Ритуал Summon Momo откроет дверь в её мир. Но будь осторожен: она не уходит просто так.</p>
+            <p>Этот ритуал призовёт Момо. Но будь осторожен: она не уходит просто так.</p>
             <h3>Подготовка</h3>
             <ol>
                 <li>Проводи ритуал в 1:13 ночи, когда тьма оживает.</li>
@@ -66,11 +67,11 @@
             </ul>
             <h3>Правила, которые нельзя нарушать</h3>
             <ul>
-                <li><strong>Не отводи взгляд от зеркала.</strong> Если посмотришь в сторону, Момо начнёт следить за тобой из каждого отражения.</li>
+                <li><strong>Не отводи взгляд от зеркала.</strong> Если посмотришь в сторону, Момо может не прийти, но начнёт следить за тобой из каждого отражения.</li>
                 <li><strong>Не гаси свечи до конца ритуала.</strong> Если пламя погаснет, Момо проклянёт тебя, и ты будешь видеть её тень каждую ночь.</li>
                 <li><strong>Не говори слово "уйди".</strong> Это разозлит Момо, и она поселится в твоём доме, пугая шорохами и тенями.</li>
                 <li><strong>Не касайся зеркала.</strong> Прикосновение откроет ей путь, и она будет являться во снах.</li>
-                <li><strong>Не трогай бумагу с именем.</strong> Если лист сдвинется, Момо привяжет твоё имя к себе.</li>
+                <li><strong>Не трогай бумагу с именем.</strong> Если лист сдвинется, Момо привяжет твоё имя к себе, и ты будешь чувствовать её присутствие всегда.</li>
                 <li><strong>Не кричи.</strong> Крик привлечёт Момо, и она начнёт стучать в двери и окна по ночам.</li>
             </ul>
             <h3>Завершение</h3>
@@ -92,17 +93,17 @@
         </section>
         <section id="disclaimer">
             <h2>Предупреждение</h2>
-            <p>Мы не несём ответственности за последствия ритуала. Summon Momo — вымышленная хоррор-история, созданная для развлечения. Не проводите ритуалы в реальной жизни.</p>
+            <p>Мы не несём ответственности за последствия ритуала. Этот сайт — вымышленная хоррор-история, созданная для развлечения. Не проводите ритуалы в реальной жизни.</p>
         </section>
     </main>
     <footer>
         <p>© 2025 Summon Momo. Все права защищены.</p>
     </footer>
-    <audio id="background-audio" autoplay loop>
-        <source src="https://storage4.lightaudio.ru/dm/3992250f/2e808c88/►YouTube%20одобряет◄%20—%20Страшная%20музыка%20для%20монтажа.mp3" type="audio/mpeg">
+    <audio id="background-audio" loop>
+        <source src="creepy-ambience.mp3" type="audio/mpeg">
     </audio>
     <audio id="scream-audio">
-        <source src="https://cdn.pixabay.com/audio/2022/03/10/audio_5e6b6c4181.mp3" type="audio/mpeg">
+        <source src="scream.mp3" type="audio/mpeg">
     </audio>
     <script src="script.js"></script>
 </body>
